--- a/apk/res/values-iw-watch/strings.xml
+++ b/apk/res/values-iw-watch/strings.xml
@@ -29,6 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"כל הזמן"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"בזמן השימוש באפליקציה"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"כל הזמן"</string>
-    <!-- no translation found for permgrouplab_health (6793578181776346442) -->
-    <skip />
+    <string name="permgrouplab_health" msgid="6793578181776346442">"כושר ובריאות"</string>
 </resources>
