--- a/apk/res/values-sl-watch/strings.xml
+++ b/apk/res/values-sl-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"Ves čas"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"Med uporabo aplikacije"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"Ves čas"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"Telesna pripravljenost in dobro počutje"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"Kondicija in dobro počutje"</string>
 </resources>
